log/build_2025-06-23_15-56-49/car_t265/stderr.log
  File "/home/orangepi/ros2_workspace/auto_car/install/lib/python3.10/site-packages/car_t265/motor_controller.py", line 75
    )
    ^
SyntaxError: unmatched ')'

